src/objects/Scenario_Income__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scenario Incomes</relationshipLabel>
        <relationshipName>Scenario_Incomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario Id</label>
        <referenceTo>Scenario__c</referenceTo>
        <relationshipLabel>Scenario Incomes</relationshipLabel>
        <relationshipName>Scenario_Incomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Scenario Income</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Scenario-Income-{00}</displayFormat>
        <label>Scenario Income Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scenario Incomes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>